# Autorace2025_Noetic

./: .gitignore  README.md  install_dependencies.sh  yaw_history.csv
src/action_bt/: CMakeLists.txt  package.xml
src/action_bt/lib/: pid.cpp  pid.hpp
src/action_bt/src/: align_server.cpp  construction_server copy.cpp  construction_server.cpp  cross_walk_server.cpp  lane_detect_server.cpp  move_server.cpp  parking_server.cpp  rotate_server.cpp  traffic_light_server.cpp  tunnel_nav_direct.cpp  tunnel_nav_server.cpp
src/behaviortree/: CMakeLists.txt  package.xml
src/behaviortree/include/: align_action_node.h  construction_action_node.h  cross_walk_action_node.h  lane_detect_action_node.h  move_action_node.h  parking_action_node.h  rotate_action_node.h  traffic_light_action_node.h  tunnel_nav_action_node.h
src/behaviortree/src/: bt_main.cpp  construction_client.cpp  cross_walk_client.cpp  lane_detect_client.cpp  parking_client.cpp  traffic_light_client.cpp  tunnel_nav_client.cpp
src/behaviortree/xml/: alt_bt.xml  bt copy.xml  bt.xml
src/camera/: CMakeLists.txt  package.xml
src/camera/src/: camera_laptop.cpp  image_projector.cpp  recorder.cpp
src/config/: color_lane.yaml  construction_params.yaml  cross_param.yaml  image_projection  move_base_height_global.yaml  move_base_height_local.yaml  move_base_inflation_global.yaml  move_base_inflation_lcoal.yaml  parking_param.yaml  rotate_params.yaml  speed_conf.yaml  traffic_light_param.yaml  tunnel_param.yaml
src/controller_manual/: CMakeLists.txt  package.xml
src/controller_manual/src/: joy2vel.cpp  joy_to_cmd_vel_GPT_ver.cpp
src/crosswalk_detector/: CMakeLists.txt  package.xml
src/crosswalk_detector/src/: crosswalk_detector_node.cpp
src/hsv_reconfigure/: CMakeLists.txt  package.xml
src/hsv_reconfigure/cfg/: HSVTuner.cfg
src/hsv_reconfigure/src/: hsv_reconfigure_tuner.cpp
src/hsv_tuner/: CMakeLists.txt  package.xml
src/hsv_tuner/src/: hsv_tuner.cpp
src/launch_file/: CMakeLists.txt  package.xml
src/launch_file/launch/: action_bt.launch  bt_main.launch  camera_calibration.launch  controller_manual.launch  gmapping_online.launch  hsv_reconfigure.launch  image_projector.launch  initialize_offline_slam.launch  initialize_online_slam.launch  lane_detect_client.launch  localization_offline.launch  recording_map.launch  run.launch
src/maps/: map_gazebo.pgm  map_gazebo.yaml  maps_1.pgm  maps_1.yaml  maps_2.pgm  maps_2.yaml  maps_3.pgm  maps_3.yaml  maps_4.pgm  maps_4.yaml
src/msg_file/: CMakeLists.txt  package.xml
src/msg_file/action/: Align.action  Construction.action  CrossWalk.action  LaneDetect.action  Move.action  Parking.action  Rotate.action  TrafficLight.action  TunnelNav.action
src/msg_file/msg/: Detection.msg  EulerAngles.msg
src/scan_debug/: CMakeLists.txt  package.xml
src/scan_debug/cfg/: ScanDebug.cfg
src/scan_debug/src/: scan_debug_node.cpp
src/yaw_tracker/: CMakeLists.txt  README.md  package.xml
src/yaw_tracker/src/: yaw_tracker_node.cpp
