<?xml version="1.0"?>
<package format="2">
  <name>controller_manual</name>
  <version>0.1.0</version>
  <description>
    Manual controller package for TurtleBot using joystick input (C++ implementation)
  </description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>joy</depend>
  
  <exec_depend>turtlebot3_bringup</exec_depend>
</package>