<?xml version="1.0"?>
<package format="2">
  <name>hsv_tuner</name>
  <version>0.1.0</version>
  <description>The hsv_tuner package for tuning HSV thresholds</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
</package>