<?xml version="1.0"?>
<package format="2">
  <name>msg_file</name>
  <version>0.0.0</version>
  <description>The msg_file package</description>
  <maintainer email="yahyasetz@gmail.com">yahyasetz</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>genmsg</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>genmsg</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>genmsg</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>

  </export>
</package>
